upadate swagger doc
